CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.7

	- Documentation changes (STR #3710, STR #3720, STR #3745)
	- PPD files with "*JobPatchFile: bla" no longer fail to load in relaxed
	  conformance mode (STR #3747)
	- The scheduler generated a bad notify-text string for printer state
	  change notifications (STR #3739)
	- The scheduler incorrectly updated printers.conf when it really needed
	  to update classes.conf or remote.cache (STR #3726)
	- Hardwired remote printers with options did not work (STR #3717)
	- Accessing the CUPS web interface using a CNAME-based hostname would
	  sometimes fail due to redirection to the actual hostname (STR #3701)
	- Subscription events had a misspelled attribute (STR #3693)
	- PIE support was broken (STR #3691)
	- "make check" failed if LC_MESSAGES was set (STR #3765)
	- Fixed the configure script to always look for the pkg-config script
	  (STR #3761)
	- The scheduler now only looks up interface hostnames if HostNameLookups
	  are enabled (STR #3737)
	- Fixed a compilation problem on DragonFly BSD (STR #3738)
	- The default PageLogFormat value had the username and job ID swapped
	  from CUPS 1.3.x (STR #3727)
	- The web interface did not allow setting of a default custom page size
	  (STR #3707)
	- The scheduler could crash if a browsed printer times out while a job
	  is printing (STR #3754)
	- The scheduler incorrectly mapped custom page sizes to standard sizes
	  (STR #3764)
	- cupsfilter and pstops did not map IPP attributes to PPD options due to
	  a change in cupsMarkOptions (STR #3756)
	- The scheduler did not always show the most recent status message from
	  the print filters (STR #3731)
	- The PostScript filter did not apply the mirror and number-up options
	  properly, leading to offset and clipped output (STR #3732)
	- The network backends always reported "low toner" or "out of toner"
	  states, even for inkjet printers (STR #3733)


CHANGES IN CUPS V1.4.6

	- Fixed a "make check" issue on Solaris (STR #3729)