@@ -3,7 +3,7 @@
  *
  *   Scheduler control program for CUPS.
  *
- *   Copyright 2007-2010 by Apple Inc.
+ *   Copyright 2007-2011 by Apple Inc.
  *   Copyright 2006-2007 by Easy Software Products.
  *
  *   These coded instructions, statements, and computer programs are the
@@ -139,6 +139,13 @@ main(int  argc,				/* I - Number of command-line args */
       num_settings = cupsParseOptions(argv[i], num_settings, &settings);
     else
       usage(argv[i]);
+  }
+
+  if (cupsGetOption("Listen", num_settings, settings) ||
+      cupsGetOption("Port", num_settings, settings))
+  {
+    _cupsLangPuts(stderr, _("cupsctl: Cannot set Listen or Port directly.\n"));
+    return (1);
   }
 
  /*
